--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
-<head>theFifthLaboratory</head>
-  <title>
+<head>
+  <title>theFifthLaboratory</title>
 </head>
 <script src="code/game.js"></script>
 <script src="code/game_levels.js"></script>
